Notes page completed.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-phone-number-input": "^3.4.12",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
