--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^10.0.0",
     "react-dropzone": "^14.3.8",
+    "react-markdown": "^10.0.0",
     "react-phone-number-input": "^3.4.12",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0"
