--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "firebase": "^11.3.1",
     "lucide-react": "^0.476.0",
     "next": "15.2.0",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.0.0",
     "react-phone-number-input": "^3.4.12",
     "sonner": "^2.0.1",
