--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "appwrite": "^17.0.0",
     "class-variance-authority": "^0.7.1",
     "firebase": "^11.3.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.476.0",
     "next": "15.2.0",
     "next-themes": "^0.4.4",
