--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "appwrite": "^17.0.0",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "firebase": "^11.3.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.476.0",
